PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changed Since Version 0.4.0:
- New: key binding to the *pel-help-pdf-select* command used to access PEL
  local or web-based PDF help pages: ``<f11> M-?``.
- New: The ``C-x g`` key binding for Magit is no longer replaced by PEL's
  ``<f11> v g`` key binding for the *magit-status* command: both bindings are
  active when Magit is available.
- New: *pel-vcs-toggle-vc-log* command, bound to ``<f11> v l``.
  Toggle the logging of VC back-end commands in the `*pel-vc-log*` buffer.
- New: [[https://raw.githubusercontent.com/pierre-rouleau/pel/master/doc/pdf/vcs-git.pdf][⅀ VCS-Git 𝔛Magit PDF]]
- New: key prefix ``<f11> d e R`` for the ediff-registry commands.
- New: support for the built-in ``smerge-mode`` activated by the new *pel-use-smerge*
  user-option. If its value is set to ``auto`` then ``smerge-mode`` is
  activated automatically in files that are annotated with diff strings.
  PEL maps the smerge-mode keys to ``<f11> d s`` key prefix.  These keys are
  in addition to the native key bindings.  The ``pel-use-smerge`` user-option
  is located inside a new group: ``pel-pkg-for-diff-merge``.
- New: Add support for [[https://github.com/michael-heerdegen/interaction-log.el][interaction-log]] external package, when the
  *pel-use-interaction-log-mode* is turned on.  The key bindings use the
  ``<f11> ? k i`` key prefix.
- New: Add *pel-activates-global-minor-modes* user-option to activate global minor-modes.
- New: PEL now generates warnings when a global minor mode is requested by one
  of the user-options that should only request the activation of /local/
  minor-mode globally.  It also generates warnings when activation of /global/
  minor-mode for a specific major-mode.
- New: Add support for the [[https://github.com/browse-kill-ring/browse-kill-ring#readme][browse-kill-ring]]
  external package when the ``pel-use-browse-kill-ring`` user-option is set to t.